@@ -4776,10 +4776,84 @@ command to generate the output files.
 
   <!-- Tree content-types -->
   <mime-type type="x-content/image-dcf">
+    <!-- http://en.wikipedia.org/wiki/Design_rule_for_Camera_File_system -->
     <_comment>Digital Photos</_comment>
     <treemagic priority="75">
       <treematch path="dcim" type="directory" non-empty="true"/>
     </treemagic>
+  </mime-type>
+
+  <mime-type type="x-content/video-vcd">
+    <!-- http://en.wikipedia.org/wiki/Video_CD
+         http://www.herongyang.com/CD-DVD/VCD-Movie-File-Directory-Structure.html -->
+    <_comment>Video CD</_comment>
+    <treemagic priority="75">
+      <treematch path="mpegav/AVSEQ01.DAT" type="file" />
+    </treemagic>
+  </mime-type>
+
+  <mime-type type="x-content/video-svcd">
+    <!-- http://en.wikipedia.org/wiki/Super_Video_CD -->
+    <_comment>Super Video CD</_comment>
+  </mime-type>
+  <mime-type type="x-content/video-dvd">
+    <!-- http://en.wikipedia.org/wiki/DVD-Video -->
+    <_comment>DVD Video</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/audio-cdda">
+    <!-- http://en.wikipedia.org/wiki/Red_Book_(audio_CD_standard) -->
+    <_comment>Compact Disc Audio</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/blank-cd">
+    <!-- http://en.wikipedia.org/wiki/Compact_Disc -->
+    <_comment>Blank CD Disc</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/blank-dvd">
+    <!-- http://en.wikipedia.org/wiki/DVD -->
+    <_comment>Blank DVD Disc</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/blank-bd">
+    <!-- http://en.wikipedia.org/wiki/Blu-ray_Disc -->
+    <_comment>Blank Blu-Ray Disc</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/blank-hddvd">
+    <!-- http://en.wikipedia.org/wiki/HD_DVD -->
+    <_comment>Blank HD DVD Disc</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/audio-dvd">
+    <!-- http://en.wikipedia.org/wiki/DVD-Audio -->
+    <_comment>DVD Audio</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/video-bluray">
+    <!-- http://en.wikipedia.org/wiki/Blu-ray_Disc -->
+    <_comment>Blu-Ray Video</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/video-hddvd">
+    <!-- http://en.wikipedia.org/wiki/HD_DVD -->
+    <_comment>HD DVD Video</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/image-picturecd">
+    <!-- http://en.wikipedia.org/wiki/Picture_CD -->
+    <_comment>Picture CD</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/audio-player">
+    <!-- see fd.o hal spec -->
+    <_comment>Portable Audio Player</_comment>
+  </mime-type>
+
+  <mime-type type="x-content/software">
+    <!-- http://standards.freedesktop.org/autostart-spec/autostart-spec-latest.html -->
+    <_comment>Software</_comment>
   </mime-type>
 </mime-info>
 
