@@ -1,3 +1,12 @@
+2008-07-19  Bastien Nocera  <hadess@hadess.net>
+
+	* Makefile.am: Fail if the tree test failed
+	* freedesktop.org.xml.in: Move some types from nautilus,
+	not fully implemented yet
+	* test-tree-magic.c (handle_one_line), (type_to_path),
+	(print_matchlet), (main): Add some debug functionality
+	* tests/tree-list: Add a test for VCDs
+
 2008-07-18  Bastien Nocera  <hadess@hadess.net>
 
 	* .cvsignore: upd
